5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1621_2920.log
== TEST (2019-04-01 18:35:20) 
-- CODE:
prato=int("0,500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("0,500")
ValueError: invalid literal for int() with base 10: '0,500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:43) 
-- CODE:
prato=int("possui:0,500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("possui:0,500")
ValueError: invalid literal for int() with base 10: 'possui:0,500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:35:45) 
-- CODE:
prato=int("possui:0,500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("possui:0,500")
ValueError: invalid literal for int() with base 10: 'possui:0,500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:15) 
-- CODE:
prato=int("possui:0.500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("possui:0.500")
ValueError: invalid literal for int() with base 10: 'possui:0.500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:18) 
-- CODE:
prato=int("possui:0.500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("possui:0.500")
ValueError: invalid literal for int() with base 10: 'possui:0.500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:45) 
-- CODE:
prato=int("500")
bebidas=int("2")
sob=int("1")
int=(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int=(total())
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:39) 
-- CODE:
prato=int("500")
bebidas=int("2")
sob=int("1")
int=(total(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int=(total(prato*bebidas*sob))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:05) 
-- CODE:
prato=int("500")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- OUTPUT:
1000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:08) 
-- CODE:
prato=int("500")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- EXECUTION TIME:
0.215255
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
1000
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
1000
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
1000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:11) 
-- CODE:
prato=int("500")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- OUTPUT:
1000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:25) 
-- CODE:
prato=int("50")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:44) 
-- CODE:
prato=int("50")
bebidas=int("20")
sob=int("10")
int=(input(prato*bebidas*sob))
-- OUTPUT:
10000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:45) 
-- CODE:
prato=int("50")
bebidas=int("20")
sob=int("10")
int=(input(prato*bebidas*sob))
-- EXECUTION TIME:
0.287566
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
10000
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10000
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
10000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:46) 
-- CODE:
prato=int("50")
bebidas=int("20")
sob=int("10")
int=(input(prato*bebidas*sob))
-- OUTPUT:
10000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:47) 
-- CODE:
prato=int("50")
bebidas=int("20")
sob=int("10")
int=(input(prato*bebidas*sob))
-- OUTPUT:
10000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:47) 
-- CODE:
prato=int("50")
bebidas=int("20")
sob=int("10")
int=(input(prato*bebidas*sob))
-- EXECUTION TIME:
0.227146
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
10000
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10000
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
10000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:01) 
-- CODE:
prato=int("5")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:05) 
-- CODE:
prato=int("")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("")
ValueError: invalid literal for int() with base 10: ''
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:18) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:39:20) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(input(prato*bebidas*sob))
-- EXECUTION TIME:
0.21979
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
6
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
6
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:36) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:39:38) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- EXECUTION TIME:
0.149052
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:39:40) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- EXECUTION TIME:
0.161783
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:40) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:06) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:07) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:08) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- EXECUTION TIME:
0.158129
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:08) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:09) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:09) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:10) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:10) 
-- CODE:
prato=int("3")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:23) 
-- CODE:
prato=int("300.00")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("300.00")
ValueError: invalid literal for int() with base 10: '300.00'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:25) 
-- CODE:
prato=int("300.00")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- EXECUTION TIME:
0.130296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    prato=int("300.00")
ValueError: invalid literal for int() with base 10: '300.00'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:25) 
-- CODE:
prato=int("300.00")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("300.00")
ValueError: invalid literal for int() with base 10: '300.00'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:34) 
-- CODE:
prato=int("30.0")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:36) 
-- CODE:
prato=int("30.0")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- EXECUTION TIME:
0.198337
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:36) 
-- CODE:
prato=int("30.0")
bebidas=int("2")
sob=int("1")
int=(int(prato*bebidas*sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:54) 
-- CODE:
prato=int("30.0")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:40:56) 
-- CODE:
prato=int("30.0")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.232539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:05) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:06) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.192156
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:08) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:09) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.129882
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:09) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.203182
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:10) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.140282
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:10) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:11) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:41) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prato=int("30.0")
ValueError: invalid literal for int() with base 10: '30.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:41:47) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.19071
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:08) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
var=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:42:10) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
var=total()
-- EXECUTION TIME:
0.147687
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 5, in <module>
    var=total()
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:10) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
var=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:20) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:42:22) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- EXECUTION TIME:
0.13807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 5, in <module>
    int=total()
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:22) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:23) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:23) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:25) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
int=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:39) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:41) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total()
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:53) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(0)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:06) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total(3+2+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:08) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total(3+2+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:08) 
-- CODE:
prato=int("300")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total(3+2+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:39) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
int=total(3+2+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:48) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:49) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:43:50) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.165926
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:43:55) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.129108
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:43:56) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.179028
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:56) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:57) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int=total(3+2+1)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:43:57) 
-- CODE:
prato=int("0600")
bebidas=int("2")
sob=int("1")
float=(int(prato+bebidas+sob))
-- EXECUTION TIME:
0.128874
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:50) 
-- CODE:
p=float(int("0,500"))
b=float(int("2"))
s=float(int("1"))
valor= int(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p=float(int("0,500"))
ValueError: invalid literal for int() with base 10: '0,500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:47:53) 
-- CODE:
p=float(int("0,500"))
b=float(int("2"))
s=float(int("1"))
valor= int(total())
-- EXECUTION TIME:
0.196002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    p=float(int("0,500"))
ValueError: invalid literal for int() with base 10: '0,500'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:53) 
-- CODE:
p=float(int("0,500"))
b=float(int("2"))
s=float(int("1"))
valor= int(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p=float(int("0,500"))
ValueError: invalid literal for int() with base 10: '0,500'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:01) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(total())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int(total())
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:03) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(total())
-- EXECUTION TIME:
0.180755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor= int(total())
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:37) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int("p+b+s")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:39) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int("p+b+s")
-- EXECUTION TIME:
0.203025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:40) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int("p+b+s")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:41) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int("p+b+s")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:48) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.13746
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.178531
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.188094
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.235138
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.175343
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:49) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:50) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:50) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:50) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:52) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.151897
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:48:52) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.127208
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:58) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:58) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:58) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:59) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:59) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:59) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:59) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:00) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:05) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:05) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:06) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:06) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:07) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:07) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:16) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:23) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:00) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:01) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- EXECUTION TIME:
0.215765
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:

-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:

-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:02) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= int(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= int("p+b+s")
ValueError: invalid literal for int() with base 10: 'p+b+s'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:16) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor= total(p+b+s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor= total(p+b+s)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:41) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:43) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.181558
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:44) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:44) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.165241
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:44) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.129345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:44) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:44) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.129671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:45) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.187667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.229921
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.169673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:46) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.157115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.310411
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:47) 
-- CODE:
p=float(int("500"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p+b+s))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:12) 
-- CODE:
p=float(int("500.00"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:14) 
-- CODE:
p=float(int("500.00"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.18338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    p=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:14) 
-- CODE:
p=float(int("500.00"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.102543
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1621/2920/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:14) 
-- CODE:
p=float(int("500.00"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.154719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    p=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:52:14) 
-- CODE:
p=float(int("500.00"))
b=float(int("2"))
s=float(int("1"))
valor=int(total(p+b+s))
-- EXECUTION TIME:
0.118728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    p=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:41) 
-- CODE:
p1=float(int("500.00"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p1=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:42) 
-- CODE:
p1=float(int("500.00"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.133649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 1, in <module>
    p1=float(int("500.00"))
ValueError: invalid literal for int() with base 10: '500.00'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:53) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:54) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:55) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:56) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:57) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.188618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:57) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.122559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:58) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:58) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:58) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:58) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:58) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.118777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.192399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.108894
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:53:59) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.103989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:00) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:00) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:00) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.122373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:00) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:01) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:01) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:01) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:01) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.134307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:02) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.206326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:54:02) 
-- CODE:
p1=float(int("500"))
b2=float(int("2"))
s3=float(int("1"))
valor=int(total(p1+b2+s3))
-- EXECUTION TIME:
0.172361
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2920/main.py", line 4, in <module>
    valor=int(total(p1+b2+s3))
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
